Implement reset password (#17)
* Scaffold 'reset-password' server implementation
* Implement 'reset-password' RPCs
